[package]
authors = ["The Rust Project Developers"]
name = "libtest"
version = "0.0.2"
edition = "2018"
description = "Rust's built in unit-test and micro-benchmarking framework"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/libterm"
homepage = "https://github.com/rust-lang/libtest"
repository = "https://github.com/rust-lang/libtest"
readme = "README.md"

[lib]
name = "libtest"
path = "src/lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
getopts = "0.2"
termcolor = "1.0"
libc = "0.2"

[features]
default = []
unstable = []