[package]
authors = ["The Rust Project Developers"]
name = "rustc_term"
version = "0.0.1"
edition = "2018"
description = "Rust's libtest terminal formatting library"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/libterm"
homepage = "https://github.com/rust-lang/libtest"
repository = "https://github.com/rust-lang/libtest"

[lib]
name = "rustc_term"
path = "lib.rs"
crate-type = ["dylib", "rlib"]
