[package]
authors = ["The Rust Project Developers"]
name = "libtest"
version = "0.0.1"
edition = "2018"
description = "Rust's built in unit-test and micro-benchmarking framework"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/libterm"
homepage = "https://github.com/rust-lang/libtest"
repository = "https://github.com/rust-lang/libtest"

[lib]
name = "libtest"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
getopts = "0.2"
term = "0.5"